<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchList">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/nextPrevContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/loadingProducts"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="296dp"
        android:indeterminate="false"
        android:max="@android:integer/config_mediumAnimTime"
        android:progressTint="@color/yellowMC"
        app:layout_constraintBottom_toBottomOf="@+id/nextPrevContainer"
        app:layout_constraintEnd_toEndOf="@+id/nextPrevContainer"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/nextPrevContainer" />

    <TextView
        android:id="@+id/txtLoading"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="324dp"
        android:text="@string/loading_string"
        android:textAlignment="center"
        android:textColor="@color/blueMC"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loadingProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvProductsContainer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results_string"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/blueMC"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnBackToSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/btnBackToSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="296dp"
        android:text="@string/btn_back_to_search"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/nextPrevContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:text="@string/btn_prev"
            android:textSize="12sp"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:text="@string/btn_next"
            android:textSize="12sp"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/txtCurrentPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toStartOf="@+id/btnNext"
            android:layout_toEndOf="@+id/btnPrev"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="center"
            android:textColor="@color/blueMC"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>